# leroy-geek-nz

./: .gitignore  LICENSE  README.md  backend.nix  configuration.nix  default.nix  elm-package.json  install.sh  leroy-geek-nz.cabal  run.sh
nix/: network.nix  production.nix  staging.nix
src/backend/: Main.hs
src/pages/: 404.elm  home.elm
src/shared/: AwesomeIcon.elm  Helper.elm  IconicLink.elm  IconicLinkList.elm  Main.elm
