name:                leroy-geek-nz
version:             0.1.0.0
synopsis:            Personal website of Leroy Hopson 
description:         Please see README.md
homepage:            http://github.com/lihop/leroy-geek-nz#readme
license:             BSD3
license-file:        LICENSE
author:              Leroy Hopson
maintainer:          git@leroy.geek.nz
copyright:           Copyright: (c) 2015 Leroy Hopson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable leroy-geek-nz
  hs-source-dirs:      src/backend
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , wai-extra
